--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -11,8 +11,11 @@
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
     private void IncrementCount()
     {
-        currentCount+=2;
+        currentCount+=IncrementAmount;
     }
 }
